<resources>
    <string name="app_name">CPEN 391 Hardware App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Country">Country</string>
    <string name="Country_example">Canada</string>
    <string name="CVV">CVV</string>
    <string name="CVV_example">123</string>
    <string name="Exp_Date">Exp. Date</string>
    <string name="Exp_example_MM">MM</string>
    <string name="Exp_example_YY">YY</string>
    <string name="Card_Number">Card Number</string>
</resources>