<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="Enter Payment Information:"
            android:textSize="30dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/Card_Number" />

        <EditText
            android:id="@+id/CardEdit"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/Exp_Date" />

        <EditText
            android:id="@+id/expDateEditMM"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.35"
            android:hint="@string/Exp_example_MM"
            android:inputType="date|number" />

        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:text="/"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/expDateEditYY"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.35"
            android:hint="@string/Exp_example_YY"
            android:inputType="date|number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/CVV" />

        <EditText
            android:id="@+id/cvvEdit"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/CVV_example"
            android:inputType="number" />
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ConfirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0"
            android:fontFamily="@font/aldrich"
            android:text="Confirm"
            android:tint="@drawable/header" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />


</LinearLayout>